# FRED

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  Unemployment Modeling.ipynb  docker-compose.yml  pyproject.toml  run.py
src/fred_forecasting_project/: main.py
src/fred_forecasting_project/api/: forecast.py  health.py  jobs_api.py
src/fred_forecasting_project/core/: config.py  logging.py
src/fred_forecasting_project/database/: deps.py  engine.py  session.py
src/fred_forecasting_project/infrastructure/: lifespan.py  scheduler.py
src/fred_forecasting_project/jobs/: pull_fred.py
src/fred_forecasting_project/models/: __init__.py  economic_indicator.py  job_runs.py  observations.py
src/fred_forecasting_project/services/: forecast_service.py  job_service.py
src/fred_forecasting_project/services/helpers/: upsert_fred.py
