[project]
name = "fred-forcasting-project"
version = "0.1.0"
description = "Forecasting for macroeconomic indicators."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.2",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "slowapi>=0.1.10",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]
